# k-robust-ccbs

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cbs.cpp  cbs.h  cmake_install.cmake  command.txt  config.cpp  config.h  const.h  heuristic.cpp  heuristic.h  k-robust-ccbs  main.cpp  map.cpp  map.h  output.txt  reservation_table.cpp  reservation_table.h  sipp.cpp  sipp.h  structs.h  task.cpp  task.h  xml_logger.cpp  xml_logger.h
examples/: auto_plan.py  config.xml  config0.xml  config2.xml  config3.xml  generate_random_task.py  grid_map1.xml  grid_task.xml  grid_task_log.xml  output.txt  random_task.xml
examples/10 agents/: grid_task_log-k2-1-10a.xml  grid_task_log-k2-10-10a.xml  grid_task_log-k2-2-10a.xml  grid_task_log-k2-3-10a.xml  grid_task_log-k2-4-10a.xml  grid_task_log-k2-6-10a.xml  grid_task_log-k2-7-10a.xml  grid_task_log-k2-8-10a.xml  grid_task_log-k2-9-10a.xml  grid_task_log1-1-k3-10a.xml  grid_task_log1-2-k3-10a.xml  grid_task_log1-3-k3-10a.xml  grid_task_log1-4-k3-10a.xml  grid_task_log1-5-k3-10a.xml
examples/11 agents/: grid_task_log-k2-1-11a.xml  grid_task_log-k2-10-11a.xml  grid_task_log-k2-2-11a.xml  grid_task_log-k2-3-11a.xml  grid_task_log-k2-4-11a.xml  grid_task_log-k2-5-11a.xml  grid_task_log-k2-6-11a.xml  grid_task_log-k2-7-11a.xml  grid_task_log-k2-8-11a.xml  grid_task_log-k2-9-11a.xml  grid_task_log1-1-k3-11a.xml  grid_task_log1-2-k3-11a.xml  grid_task_log1-3-k3-11a.xml  grid_task_log1-4-k3-11a.xml  grid_task_log1-5-k3-11a.xml
examples/12 agents/: grid_task_log-k2-1-12a.xml  grid_task_log-k2-10-12a.xml  grid_task_log-k2-2-12a.xml  grid_task_log-k2-3-12a.xml  grid_task_log-k2-4-12a.xml  grid_task_log-k2-5-12a.xml  (+9 more)
(+250 files in other folders)
